--- a/FindLocation/AndroidManifest.xml
+++ b/FindLocation/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDnxb8_JDhr7nx7rxzHuocBzNfgg67BaeU" />
+            android:value="Key goes here" />
     </application>
 
 </manifest>
