--- a/WhereAmI/AndroidManifest.xml
+++ b/WhereAmI/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDdieDHzVyLtUiBJPNNR9eUMQYdG4yQwOs" />
+            android:value="Key goes here" />
         
     </application>
 
